Update AnalyticsRulesCICD.yml for Azure Pipelines

--- a/Pipelines/AnalyticsRulesCICD.yml
+++ b/Pipelines/AnalyticsRulesCICD.yml
@@ -4,7 +4,7 @@
 name: build and deploy Alert Rules
 resources:
  pipelines:
-   - pipeline: Scripts
+   - pipeline: BuildScripts
      source: 'scriptsCI'
 trigger:
  paths:
