Update AnalyticsRulesCICD.yml for Azure Pipelines

--- a/Pipelines/AnalyticsRulesCICD.yml
+++ b/Pipelines/AnalyticsRulesCICD.yml
@@ -4,8 +4,8 @@
 name: build and deploy Alert Rules
 resources:
  pipelines:
-   - pipeline: BuildScripts
-     source: 'scriptsCI'
+   - pipeline: Scripts
+     source: 'BuildScripts'
 trigger:
  paths:
    include:
