--- a/Pipelines/AnalyticsRulesCICD.yml
+++ b/Pipelines/AnalyticsRulesCICD.yml
@@ -54,7 +54,7 @@ stages:
       - task: AzurePowerShell@4
         displayName: 'Create and Update Alert Rules'
         inputs:
-         azureSubscription: 'Visual Studio Enterprise'
+         azureSubscription: 'SentiTest'
          ScriptPath: '$(Pipeline.Workspace)/Scripts/Scripts/CreateAnalyticsRules.ps1'
          ScriptArguments: '-Workspace $(Workspace) -RulesFile analytics-rules.json'
          azurePowerShellVersion: LatestVersion
